# rust_exercises_2

./: Cargo.toml  README.md
word_exercises/Managing_Growing_Projects_with_Packages,Crates,and_Modules/Defining modules to Control Scope and Privacy/restaurant/src/: lib.rs
word_exercises/Managing_Growing_Projects_with_Packages,Crates,and_Modules/Paths for Referring to an Item in the Module Tree/code/src/: lib.rs
word_exercises/enums/src/: main.rs
word_exercises/first/src/: main.rs
word_exercises/structs/src/: main.rs
word_exercises/understanding_ownership_exercises/exercises/src/: main.rs
